<resources>
    <string name="app_name">Match the Cards</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">Play</string>
    <string name="questionMark">\?</string>
    <string name="score"> %d/10 </string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="column_size">Column Size</string>
    <string name="difficulty_level">Difficulty level</string>
    <string name="match_the_cards">Match the Cards</string>
    <string name="plus">plus</string>
    <string name="minus">minus</string>
    <string name="shopify_image">Shopify Image</string>
    <string name="product_image">product image</string>
    <string name="trans_name">startPlayTransition</string>
    <string name="game_transition">gameTransition</string>
    <string name="information_button">Information Button</string>
</resources>
